# customer_support_agent

./: .env  .gitignore  llm.py  main.py  pyproject.toml
data/: research.md
notebooks/: experiments.ipynb
